--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
               "outputPath": "dist/app-i18n-ru/",
               "i18nFile": "src/locale/messages.ru.xlf",
               "i18nFormat": "xlf",
-              "i18nLocale": "ru"
+              "i18nLocale": "ru",
+              "baseHref": "/ru/"
             },
             "production": {
               "fileReplacements": [
